# smolvlm_sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: accelerate_config.yaml  eval_image.yaml  eval_local.yaml  eval_video.yaml  model_256m.yaml  model_500m.yaml  train_video_stage.yaml  train_vision_stage.yaml
mlx/: benchmark_loader.py  evaluate_local.py  lora_finetune.py  metrics.py  mlx_inference.py  pytorch_inference.py  requirements_mlx.txt  test_data_loading.py  test_inference.py
notebooks/: gemini_vsi_bench_colab.ipynb  smolvlm2_training_colab.ipynb  vlm_evaluation_colab.ipynb
scripts/: download_all_datasets.sh  evaluate_model.sh  run_video_stage.sh  run_vision_stage.sh  setup_environment.sh
smolvlm_training.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py
src/data/: __init__.py  data_collator.py  data_mixer.py  dataset_loaders.py  download_datasets.py  video_processor.py
src/evaluation/: __init__.py  evaluate.py  runner.py
src/evaluation/benchmarks/: __init__.py  benchmark_configs.py  plm_videobench.py
src/evaluation/models/: __init__.py  model_registry.py  vlm_wrapper.py
src/evaluation/utils/: __init__.py  result_parser.py
src/model/: __init__.py  model_init.py  pixel_shuffle.py  smolvlm_config.py
src/training/: __init__.py  train_video.py  train_vision.py  trainer.py
tests/: __init__.py  conftest.py
tests/data_tests/: __init__.py  test_data_collator.py  test_data_mixer.py  test_dataset_loaders.py  test_download_datasets.py  test_integration.py  test_video_processor.py
tests/fixtures/: __init__.py  mock_data.py
