[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolvlm-training"
version = "0.1.0"
description = "Training pipeline for SmolVLM2 256M and 500M models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SmolVLM Training"}
]
keywords = ["vision-language-model", "multimodal", "smolvlm", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "num2words",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "safetensors",
    "sentencepiece",
    "einops",
    "timm",
    # Note: Video processing backends are platform-specific
    # Install with: pip install -e ".[cloud]" or pip install -e ".[local]"
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

# Flash attention (CUDA only)
flash = [
    "flash-attn>=2.5.0",
]

# Cloud/GPU training (Linux)
cloud = [
    "decord>=0.6.0",
    "deepspeed>=0.14.0",
    "bitsandbytes>=0.43.0",
    "wandb",
    "tensorboard",
]

# Local/Apple Silicon (MLX)
local = [
    "mlx>=0.18.0",
    "mlx-lm>=0.18.0",
    "torchvision>=0.16.0",
]

# Video processing - choose based on platform
video-linux = [
    "decord>=0.6.0",
]
video-macos = [
    "torchvision>=0.16.0",  # Uses torchvision.io for video
]

# Evaluation dependencies (lmms-eval framework)
eval = [
    "lmms-eval>=0.5.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

# Full evaluation with all video backends
eval-full = [
    "lmms-eval>=0.5.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
    "decord>=0.6.0",
    "av>=10.0.0",
]

[project.scripts]
smolvlm-train-vision = "src.training.train_vision:main"
smolvlm-train-video = "src.training.train_video:main"
smolvlm-download = "src.data.download_datasets:main"
smolvlm-eval = "src.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "-ra"]
markers = [
    "cuda: marks tests requiring CUDA GPU",
    "mps: marks tests requiring Apple Metal (MPS)",
    "video: marks tests requiring video processing",
    "integration: marks integration tests",
    "download_data: marks tests that download data from HuggingFace",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
